--- a/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Containers/Upsert.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Containers/Upsert.razor
@@ -1,8 +1,4 @@
-﻿@page "/containers/upsert"
-
-@using Syncfusion.Blazor.RichTextEditor
-
-<FmPageIntro Heading="New Container">
+﻿<FmPageIntro Heading="New Container">
     <Breadcrumbs>
         <BreadcrumbItem IconCss="fa-solid fa-house"
                         Text="Dashboard"
@@ -47,7 +43,7 @@
                             <Items>
                                 <GridItem ColumnSize="@GridSize.GridItemXLarge">
                                     <Child>
-                                        <FmCard Style="p-2" IsHoverable="false">
+                                        <FmCard style="p-2" IsHoverable="false">
                                             <FmHeader>
                                                 <FmTypography Type="@Typography.LevelTwo"
                                                               Text="Basic Info"
@@ -90,7 +86,7 @@
 
                                 <GridItem ColumnSize="@GridSize.GridItemXLarge">
                                     <Child>
-                                        <FmCard Style="p-2"
+                                        <FmCard style="p-2"
                                                 IsHoverable="false">
                                             <FmHeader>
                                                 <FmTypography Type="@Typography.LevelTwo"
@@ -124,7 +120,7 @@
 
                                 <GridItem ColumnSize="@GridSize.GridItemXLarge">
                                     <Child>
-                                        <FmCard Style="p-2"
+                                        <FmCard style="p-2"
                                                 IsHoverable="false">
                                             <FmHeader>
                                                 <FmTypography Type="@Typography.LevelTwo"
@@ -174,7 +170,7 @@
 
                                 <GridItem ColumnSize="@GridSize.GridItemXLarge">
                                     <Child>
-                                        <FmCard Style="p-2"
+                                        <FmCard style="p-2"
                                                 IsHoverable="false">
                                             <FmHeader>
                                                 <FmTypography Type="@Typography.LevelTwo"
@@ -198,7 +194,7 @@
 
             <GridItem ColumnSize="@GridSize.GridItemSmall">
                 <Child>
-                    <FmCard Style="p-2"
+                    <FmCard style="p-2"
                             IsHoverable="false">
                         <FmHeader>
                             <FmTypography Type="@Typography.LevelTwo"
