--- a/src/Formee/Clients/Clients.Web.Components/_Imports.razor
+++ b/src/Formee/Clients/Clients.Web.Components/_Imports.razor
@@ -1,4 +1,6 @@
-﻿@using Syncfusion.Blazor.Cards;
+﻿@using Markdig
+
+@using Syncfusion.Blazor.Cards;
 @using Syncfusion.Blazor.Inputs;
 @using Syncfusion.Blazor.Charts;
 @using Syncfusion.Blazor.Popups;
@@ -7,19 +9,23 @@
 @using Syncfusion.Blazor.Layouts;
 @using Syncfusion.Blazor.Navigations;
 @using Syncfusion.Blazor.SplitButtons;
+@using Syncfusion.Blazor.RichTextEditor;
+@using Syncfusion.Blazor.DropDowns;
 
-@using Clients.Web.Components.Components.Typography;
+@using Client.Web.Utilities.Dtos;
+@using Client.Web.Utilities.Models;
+@using Client.Web.Utilities.Constants;
+
 @using Clients.Web.Components.Components.Grid;
 @using Clients.Web.Components.Components.Cards;
 @using Clients.Web.Components.Components.Spacers;
 @using Clients.Web.Components.Components.Loaders;
-
-@using Microsoft.AspNetCore.Components.Forms;
-@using Microsoft.AspNetCore.Components.Authorization;
-@using Microsoft.AspNetCore.Components.Routing;
 @using Clients.Web.Components.Components.Identity;
+@using Clients.Web.Components.Components.Navigation;
+@using Clients.Web.Components.Components.Typography;
+
 
 @using Microsoft.AspNetCore.Components;
-@using Client.Web.Utilities.Constants;
-@using Client.Web.Utilities.Models;
-@using Client.Web.Utilities.Dtos;
+@using Microsoft.AspNetCore.Components.Forms;
+@using Microsoft.AspNetCore.Components.Routing;
+@using Microsoft.AspNetCore.Components.Authorization;
