--- a/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
+++ b/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
@@ -2,9 +2,11 @@
     --grid-gap: 1rem;
     --color-primary: #9e8ddf;
     --color-secondary: #4d7b95;
+    --color-white: #fff;
     --color-light: #edeeee;
+    --color-text: #414141;
+    --color-body: #fbf7ff;
     --font-family: 'Poppins', sans-serif;
-
     --font-size-link: 1.1rem;
 }
 
@@ -15,8 +17,10 @@
 }
 
 body {
-    background-color: #fafbfd;
+    background-color: var(--color-body);
     font-family: var(--font-family);
+    font-weight: 300;
+    color: var(--color-text);
 }
 
 h1:focus {
@@ -96,17 +100,115 @@ h1:focus {
     margin-bottom: 1rem;
 }
 
+.mb-3 {
+    margin-bottom: 3rem;
+}
+
 .w-100 {
     width: 100%;
 }
 
+
+.mr-2 {
+    margin-right: 2rem;
+}
+
 .fm-link {
-    color: var(--color-secondary);
+    color: var(--color-white);
     text-decoration: none;
     font-size: var(--font-size-link);
+    padding-block: 1rem;
+    position: relative;
 }
+
+.fm-link__active {
+    color: var(--color-primary);
+    background-color: var(--color-body);
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+    .fm-link__active::before {
+        content: "";
+        position: absolute;
+        top: -10px;
+        right: 0;
+        background-color: var(--color-primary);
+        z-index: 10;
+        width: 10px;
+        height: 10px;
+        border-bottom-right-radius: 7px;
+        box-shadow: 5px 0 0 var(--color-body);
+    }
+
+    .fm-link__active::after {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        right: 0;
+        background-color: var(--color-primary);
+        z-index: 10;
+        width: 10px;
+        height: 10px;
+        border-top-right-radius: 7px;
+        box-shadow: 5px 0 0 var(--color-body);
+    }
 
 .fm-seperator__horizontal {
     border: 1px solid var(--color-light);
     margin-block: 1rem;
+}
+
+.e-sidebar {
+    background-color: var(--color-primary) !important;
+    padding-left: 2rem;
+}
+
+    .e-sidebar.e-dock.e-close {
+        padding-left: 0 !important;
+    }
+
+        .e-sidebar.e-dock.e-close .fm-link {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        .e-sidebar.e-dock.e-close .fm-text {
+            display: none !important;
+        }
+
+        .e-sidebar.e-dock.e-close .fm-motto,
+        .e-sidebar.e-dock.e-close .fm-icon {
+            display: block !important;
+        }
+
+        .e-sidebar.e-dock.e-close .fm-icon {
+            padding-left: 0 !important;
+        }
+
+        .e-sidebar.e-dock.e-close .fm-motto {
+            font-size: 1rem !important;
+        }
+
+.fm-motto {
+    color: var(--color-white);
+    font-weight: 500;
+}
+
+.fm-markdown__display > * {
+    margin-bottom: 1rem;
+}
+
+.fm-markdown__display h1 {
+    font-size: 1.1rem;
+}
+
+.fm-markdown__display ol,
+.fm-markdown__display ul {
+    padding-left: 2rem;
+}
+
+.fm-markdown__display p,
+.fm-markdown__display li {
+    font-size: 1.1rem;
 }
