--- a/src/Formee/Clients/Clients.Web.Components/MainLayout.razor
+++ b/src/Formee/Clients/Clients.Web.Components/MainLayout.razor
@@ -115,7 +115,7 @@
     <ChildContent>
         <div class="fm-sidebar__user py-4">
             <div class="d-flex justify-content-between align-items-center">
-                <FmLoader FetchingState="_isFetching">
+                <FmLoader>
                     <Content>
                         <AppBarNotification />
                     </Content>
