--- a/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/History/Index.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/History/Index.razor
@@ -13,7 +13,7 @@
 
 <FmSpacer />
 
-<FmLoader FetchingState="IsFetching">
+<FmLoader>
     <Content>
         <SfGrid DataSource="History" />
     </Content>
