--- a/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Sites/View.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Sites/View.razor
@@ -1,4 +1,4 @@
-﻿<FmLoader FetchingState="IsFetching">
+﻿<FmLoader>
     <Content>
         <FmPageIntro Heading="@_site.Name">
             <Breadcrumbs>
