--- a/src/Formee/Clients/Clients.Web.Components/Pages/Index.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Pages/Index.razor
@@ -160,7 +160,7 @@
                         {
                             <SfChart Width="100%" Title="Number of hits">
                                 <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.DateTime" 
-                                                   IntervalType="IntervalType.Auto" />
+                                                   IntervalType="IntervalType.Days" />
 
                                 <ChartSeriesCollection>
                                     <ChartSeries DataSource="@AnalyticsService.HitChartDataSeries"
