--- a/src/Formee/Clients/Clients.Web.Components/_Imports.razor
+++ b/src/Formee/Clients/Clients.Web.Components/_Imports.razor
@@ -21,6 +21,7 @@
 @using Clients.Web.Components.Components.Grid;
 @using Clients.Web.Components.Components.Cards;
 @using Clients.Web.Components.Components.Spacers;
+@using Clients.Web.Components.Components.Lists
 @using Clients.Web.Components.Components.Loaders;
 @using Clients.Web.Components.Components.Identity;
 @using Clients.Web.Components.Components.Navigations;
