--- a/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Sites/Index.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Sites/Index.razor
@@ -13,7 +13,7 @@
 
 <FmSpacer />
 
-<FmLoader FetchingState="IsFetching">
+<FmLoader>
     <Content>
         <Grid Gap="@GridGap.Large">
             <Items>
